--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-sudoku",
   "version": "0.1.0",
   "private": true,
+  "engine": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
