--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-sudoku",
   "version": "0.1.0",
   "private": true,
-  "engine": {
+  "engines": {
     "node": "12.13.1",
     "npm": "6.12.1"
   },
